<resources>
    <string name="app_name" translatable="false">PlateDetect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="web_client_id" translatable="false">1069924781685-e8f9vubgar7vvqnh177mro3v9lc3ho2a.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="alt_bottom_sheet_chevron" translatable="false">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus" translatable="false">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus" translatable="false">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus" translatable="false">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus" translatable="false">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus" translatable="false">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus" translatable="false">Increase the number of threads used</string>

    <string name="label_interence_time" translatable="false">Inference Time</string>
    <string name="label_fps" translatable="false">Frames per Second</string>
    <string name="label_confidence_threshold" translatable="false">Threshold</string>
    <string name="label_max_results" translatable="false">Max Results</string>
    <string name="label_threads" translatable="false">Number of Threads</string>
    <string name="label_delegate" translatable="false">Delegate</string>
    <string name="label_models" translatable="false">ML Model</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>

    <string name="devices" translatable="false">USB Devices</string>
    <string name="Aruino_devices" translatable="false">Chọn thiết bị Hồng ngoại:</string>
    <string name="Camera_devices" translatable="false">Chọn thiết bị Camera:</string>
    <string name="device_kinds" translatable="false">Chọn đầu ra cho thiết bị:</string>
    <string name="hint_device" translatable="false">--Chọn thiết bị--</string>

    <string name="google_sign_in_button">Google Sign-in Button</string>
</resources>