<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/devices"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:textSize="20dp"
            android:textStyle="normal"
            android:text="Cơ sở hiện tại" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="15dp"
            android:text="@string/Aruino_devices"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/IR_devices_selection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/listbox_main__1_"
                android:elevation="10dp"
                android:paddingVertical="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="40dp"
                android:text="@string/hint_device"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/IR_setup_data_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:background="@drawable/setting_icon"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="15dp"
            android:text="@string/Camera_devices"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/Camera_devices_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/listbox_main__1_"
            android:elevation="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"
            android:text="@string/hint_device"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="15dp"
            android:text="@string/device_kinds"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/radio_checkIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check-in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_checkOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check-out"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_input_box_grey"
            android:backgroundTint="@color/red_700"
            android:text="Xác nhận"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>